@@ -16,6 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <aspectj-plugin.version>1.13.2-SNAPSHOT</aspectj-plugin.version>
+        <aspects-version>1.9.8.RC3</aspects-version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,10 +32,12 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
+            <version>${aspects-version}</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
+            <version>${aspects-version}</version>
         </dependency>
     </dependencies>
 
@@ -45,8 +48,10 @@
                 <artifactId>aspectj-maven-plugin</artifactId>
                 <version>${aspectj-plugin.version}</version>
                 <configuration>
+                    <enablePreview>false</enablePreview>
                     <complianceLevel>${java.version}</complianceLevel>
-                    <showWeaveInfo>true</showWeaveInfo>
+                    <source>17</source>
+                    <target>17</target>
                     <verbose>true</verbose>
                     <Xlint>ignore</Xlint>
                     <encoding>UTF-8</encoding>
@@ -56,20 +61,21 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <phase>test</phase>
                         <goals>
-                            <goal>test-compile</goal>
                             <goal>compile</goal>
+                            <goal>test-compile</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <systemPropertyVariables>
-                        <logback.configurationFile>${project.basedir}/src/main/resources/logback.xml</logback.configurationFile>
-                    </systemPropertyVariables>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
